# secure-notes-sync

./: .gitallowed  .gitignore  README.md
cli/: generate-setup.sh  nsync_picker.py  pass-nsync.bash  pyproject.toml
cli/nsync/: __init__.py  auth.py  cli.py  config.py  crypto.py  store.py  sync.py
infra/: package-lock.json  package.json  tsconfig.json
infra/cdk.out/: ConfigSyncStack.assets.json  ConfigSyncStack.metadata.json  ConfigSyncStack.template.json  manifest.json  tree.json
infra/lib/: stack.ts
scripts/: nsync-type.sh
