[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"

[project]
name = "nsync"
version = "0.1.0"
description = "Secure notes sync CLI"
requires-python = ">=3.10"
dependencies = [
    "boto3>=1.34",
    "pycognito>=2024.1",
    "cryptography>=42.0",
]

[project.scripts]
nsync = "nsync.cli:main"
